SystecCAN: Fix device number assignment in availableDevices()

[ChangeLog][QCanBus][SystecCAN] The function availableDevices()
returned the wrong device number in some cases. In turn, it was
not possible to connect to the correct device afterwards.

Task-number: QTBUG-63833
Change-Id: I37cc250d144596af00aec9f743f0016e5634abe7
Reviewed-by: Alex Blasche <alexander.blasche@qt.io>
Reviewed-by: André Hartmann <aha_1980@gmx.de>
Reviewed-by: Denis Shienkov <denis.shienkov@gmail.com>